# Synria-C10-SDK

./: README.md  pyproject.toml
examples/: camera_use.py
src/synria_c10.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/synria_cam/: __init__.py  camera.py
src/synria_cam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
